--- a/labelle_hair_haven.html
+++ b/labelle_hair_haven.html
@@ -1,16 +1,11 @@
-<img src="gallery1.jpg" alt="Box Braids Style" width="300">
-<link rel="stylesheet" href="styles.css">
-document.querySelector(".btn").addEventListener("click", function() {
-    alert("Booking system coming soon!");
-});
-<script src="script.js"></script>
-<?php
-if ($_SERVER["REQUEST_METHOD"] == "POST") {
-    $name = $_POST["name"];
-    $email = $_POST["email"];
-    $message = $_POST["message"];
-    mail("info@labellehairhaven.com", "New Inquiry", $message, "From: $email");
-    echo "Thank you for reaching out!";
-}
-?>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+/LabelleHairHaven
+  ├── index.html
+  ├── styles.css
+  ├── script.js
+  ├── contact.php
+  ├── images/
+  │     ├── logo.png
+  │     ├── gallery1.jpg
+  │     ├── gallery2.jpg
+  │     ├── background.jpg
+  ├── favicon.ico
